libqt6c/src/libqstandarditemmodel.hpp

typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QModelRoleDataSpan QModelRoleDataSpan;
typedef struct QObject QObject;
typedef struct QStandardItem QStandardItem;
typedef struct QStandardItemModel QStandardItemModel;
typedef struct QVariant QVariant;
QStandardItemModel* QStandardItemModel_new();
QStandardItemModel* QStandardItemModel_new2(int rows, int columns);
QStandardItemModel* QStandardItemModel_new3(QObject* parent);
QStandardItemModel* QStandardItemModel_new4(int rows, int columns, QObject* parent);
QMetaObject* QStandardItemModel_MetaObject(const QStandardItemModel* self);
void QStandardItemModel_SetItemRoleNames(QStandardItemModel* self, const libqt_map /* of int to libqt_string */ roleNames);
libqt_map /* of int to libqt_string */ QStandardItemModel_RoleNames(const QStandardItemModel* self);
QModelIndex* QStandardItemModel_Index(const QStandardItemModel* self, int row, int column, const QModelIndex* parent);
QModelIndex* QStandardItemModel_Parent(const QStandardItemModel* self, const QModelIndex* child);
int QStandardItemModel_RowCount(const QStandardItemModel* self, const QModelIndex* parent);
int QStandardItemModel_ColumnCount(const QStandardItemModel* self, const QModelIndex* parent);
bool QStandardItemModel_HasChildren(const QStandardItemModel* self, const QModelIndex* parent);
QVariant* QStandardItemModel_Data(const QStandardItemModel* self, const QModelIndex* index, int role);
void QStandardItemModel_MultiData(const QStandardItemModel* self, const QModelIndex* index, QModelRoleDataSpan* roleDataSpan);
bool QStandardItemModel_SetData(QStandardItemModel* self, const QModelIndex* index, const QVariant* value, int role);
bool QStandardItemModel_ClearItemData(QStandardItemModel* self, const QModelIndex* index);
QVariant* QStandardItemModel_HeaderData(const QStandardItemModel* self, int section, int orientation, int role);
bool QStandardItemModel_SetHeaderData(QStandardItemModel* self, int section, int orientation, const QVariant* value, int role);
bool QStandardItemModel_InsertRows(QStandardItemModel* self, int row, int count, const QModelIndex* parent);
bool QStandardItemModel_InsertColumns(QStandardItemModel* self, int column, int count, const QModelIndex* parent);
bool QStandardItemModel_RemoveRows(QStandardItemModel* self, int row, int count, const QModelIndex* parent);
bool QStandardItemModel_RemoveColumns(QStandardItemModel* self, int column, int count, const QModelIndex* parent);
int QStandardItemModel_Flags(const QStandardItemModel* self, const QModelIndex* index);
int QStandardItemModel_SupportedDropActions(const QStandardItemModel* self);
libqt_map /* of int to QVariant* */ QStandardItemModel_ItemData(const QStandardItemModel* self, const QModelIndex* index);
bool QStandardItemModel_SetItemData(QStandardItemModel* self, const QModelIndex* index, const libqt_map /* of int to QVariant* */ roles);
void QStandardItemModel_Clear(QStandardItemModel* self);
void QStandardItemModel_Sort(QStandardItemModel* self, int column, int order);
QStandardItem* QStandardItemModel_ItemFromIndex(const QStandardItemModel* self, const QModelIndex* index);
QModelIndex* QStandardItemModel_IndexFromItem(const QStandardItemModel* self, const QStandardItem* item);
QStandardItem* QStandardItemModel_Item(const QStandardItemModel* self, int row);
void QStandardItemModel_SetItem(QStandardItemModel* self, int row, int column, QStandardItem* item);
void QStandardItemModel_SetItem2(QStandardItemModel* self, int row, QStandardItem* item);
QStandardItem* QStandardItemModel_InvisibleRootItem(const QStandardItemModel* self);
QStandardItem* QStandardItemModel_HorizontalHeaderItem(const QStandardItemModel* self, int column);
void QStandardItemModel_SetHorizontalHeaderItem(QStandardItemModel* self, int column, QStandardItem* item);
QStandardItem* QStandardItemModel_VerticalHeaderItem(const QStandardItemModel* self, int row);
void QStandardItemModel_SetVerticalHeaderItem(QStandardItemModel* self, int row, QStandardItem* item);
void QStandardItemModel_SetHorizontalHeaderLabels(QStandardItemModel* self, const QStringList* labels);
void QStandardItemModel_SetVerticalHeaderLabels(QStandardItemModel* self, const QStringList* labels);
void QStandardItemModel_SetRowCount(QStandardItemModel* self, int rows);
void QStandardItemModel_SetColumnCount(QStandardItemModel* self, int columns);
void QStandardItemModel_AppendRow(QStandardItemModel* self, const libqt_list /* of QStandardItem* */ items);
void QStandardItemModel_AppendColumn(QStandardItemModel* self, const libqt_list /* of QStandardItem* */ items);
void QStandardItemModel_AppendRow2(QStandardItemModel* self, QStandardItem* item);
void QStandardItemModel_InsertRow(QStandardItemModel* self, int row, const libqt_list /* of QStandardItem* */ items);
void QStandardItemModel_InsertColumn(QStandardItemModel* self, int column, const libqt_list /* of QStandardItem* */ items);
void QStandardItemModel_InsertRow2(QStandardItemModel* self, int row, QStandardItem* item);
bool QStandardItemModel_InsertRow3(QStandardItemModel* self, int row);
bool QStandardItemModel_InsertColumn2(QStandardItemModel* self, int column);
QStandardItem* QStandardItemModel_TakeItem(QStandardItemModel* self, int row);
libqt_list /* of QStandardItem* */ QStandardItemModel_TakeRow(QStandardItemModel* self, int row);
libqt_list /* of QStandardItem* */ QStandardItemModel_TakeColumn(QStandardItemModel* self, int column);
QStandardItem* QStandardItemModel_TakeHorizontalHeaderItem(QStandardItemModel* self, int column);
QStandardItem* QStandardItemModel_TakeVerticalHeaderItem(QStandardItemModel* self, int row);
QStandardItem* QStandardItemModel_ItemPrototype(const QStandardItemModel* self);
void QStandardItemModel_SetItemPrototype(QStandardItemModel* self, const QStandardItem* item);
libqt_list /* of QStandardItem* */ QStandardItemModel_FindItems(const QStandardItemModel* self, const libqt_string text);
int QStandardItemModel_SortRole(const QStandardItemModel* self);
void QStandardItemModel_SetSortRole(QStandardItemModel* self, int role);
QStringList QStandardItemModel_MimeTypes(const QStandardItemModel* self);
QMimeData* QStandardItemModel_MimeData(const QStandardItemModel* self, const libqt_list /* of QModelIndex* */ indexes);
bool QStandardItemModel_DropMimeData(QStandardItemModel* self, const QMimeData* data, int action, int row, int column, const QModelIndex* parent);
void QStandardItemModel_ItemChanged(QStandardItemModel* self, QStandardItem* item);
QStandardItem* QStandardItemModel_Item2(const QStandardItemModel* self, int row, int column);
bool QStandardItemModel_InsertRow22(QStandardItemModel* self, int row, const QModelIndex* parent);
bool QStandardItemModel_InsertColumn22(QStandardItemModel* self, int column, const QModelIndex* parent);
QStandardItem* QStandardItemModel_TakeItem2(QStandardItemModel* self, int row, int column);
libqt_list /* of QStandardItem* */ QStandardItemModel_FindItems2(const QStandardItemModel* self, const libqt_string text, int flags);
libqt_list /* of QStandardItem* */ QStandardItemModel_FindItems3(const QStandardItemModel* self, const libqt_string text, int flags, int column);
void QStandardItemModel_Delete(QStandardItemModel* self);